<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserOutletSetupFragment">

    <TextView
        android:id="@+id/frag_setup_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outlet"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frag_setup_save_btn_id"
        android:layout_below="@+id/frag_setup_title_id"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/frag_setup_banner_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/frag_setup_edit_banner_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:src="@android:drawable/ic_menu_edit" />

                <RelativeLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/frag_setup_logo_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/edit"
                        android:background="@android:color/darker_gray"
                        android:textColor="@android:color/white"
                        android:padding="2dp"
                        android:id="@+id/frag_Setup_edit_logo_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </RelativeLayout>
            <LinearLayout
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/frag_setup_name_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:editable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/outlet_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/frag_setup_contact_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact_number"
                        android:inputType="phone"
                        android:maxLength="10" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8">

                        <EditText
                            android:id="@+id/frag_setup_zipcode_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/outlet_zipcode"
                            android:inputType="number" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/frag_setup_search_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:src="@android:drawable/ic_search_category_default" />
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/frag_setup_address_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/outlet_address"
                        android:inputType="textCapWords|textPersonName|textNoSuggestions" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/frag_setup_save_btn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/save_outlet"
        android:textColor="@android:color/white" />
</RelativeLayout>