<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BusinessActivity">
    <RelativeLayout
        android:id="@+id/business_list_layout_id"
        android:background="@color/window_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/business_list_date_layout"
            android:weightSum="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_weight="0.85"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/business_list_date_id"
                    android:hint="@string/select_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="center"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:src="@drawable/ic_calendar_task"
                android:layout_weight="0.15"
                android:tint="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/business_list_recycler_id"
            android:layout_above="@+id/business_list_layout"
            android:layout_below="@+id/business_list_date_layout"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/business_list_empty_id"
            android:layout_above="@+id/business_list_layout"
            android:layout_below="@+id/business_list_date_layout"
            android:gravity="center"
            android:layout_margin="6dp"
            android:text="@string/data_is_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/business_list_layout"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="2dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Net Business"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:gravity="start|center"
                    android:background="@color/window_background"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingLeft="2dp"
                    android:singleLine="true"
                    android:layout_marginEnd="1dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/business_net_amount_id"
                    android:text="0/-"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:gravity="end"
                    android:background="@color/window_background"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingRight="2dp"
                    android:singleLine="true"
                    android:layout_marginStart="1dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingBottom="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Business Expenses"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:gravity="start|center"
                    android:background="@color/window_background"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingLeft="2dp"
                    android:singleLine="true"
                    android:layout_marginEnd="1dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/business_expenses_amount_id"
                    android:text="0/-"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:gravity="end"
                    android:background="@color/window_background"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingRight="2dp"
                    android:singleLine="true"
                    android:layout_marginStart="1dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingBottom="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Gross Business"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:gravity="start|center"
                    android:background="@color/window_background"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:paddingLeft="2dp"
                    android:singleLine="true"
                    android:layout_marginEnd="1dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/business_gross_amount_id"
                    android:text="0/-"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:gravity="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@color/window_background"
                    android:layout_weight="1"
                    android:paddingRight="2dp"
                    android:layout_marginStart="1dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>

        </LinearLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/business_add_fab_id"
            android:src="@android:drawable/ic_input_add"
            android:layout_above="@+id/business_list_layout"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/business_add_layout_id"
        android:orientation="vertical"
        android:padding="6dp"
        android:background="@color/window_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/business_add_date_layout"
            android:weightSum="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_weight="0.85"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/business_add_date_id"
                    android:hint="@string/select_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:src="@drawable/ic_calendar_task"
                android:layout_weight="0.15"
                android:tint="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <ScrollView
            android:id="@+id/business_scroll_id"
            android:layout_below="@+id/business_add_date_layout"
            android:layout_above="@+id/business_add_save_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:padding="6dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/business_add_insert_id"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/business_add_include_id"
                    android:src="@android:drawable/ic_input_add"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/business_add_save_id"
            android:layout_alignParentBottom="true"
            android:text="@string/save_business"
            android:layout_gravity="bottom"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>